--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -7,8 +7,15 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="author" content="Александр Егоров">
+    {% if meta_description %}
+    <meta name="description" content="{{ meta_description }}">
+    {% endif %}
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>{{title}}{% if title_path %}{{" | "}}{{title_path}}{% endif %}</title>
+    <link href="{{ctx.PathFor('blog')}}recent.atom"
+          rel="alternate"
+          title="Recent Posts"
+          type="application/atom+xml">
 </head>
 <body>
 <noscript>
