--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="welcome" lang="ru">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +7,11 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="author" content="Александр Егоров">
+    <meta name="google-site-verification" content="PHs3gMRw0_sIAdVqjk38_fbq9h3VGHkkIq3w1chJXWs"/>
+    <meta name='yandex-verification' content='4c9a9332153bb06f' />
 
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link href='https://fonts.googleapis.com/css?family=Noto+Serif:400,700,400italic,700italic|Open+Sans:700,400&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
     <title>Админка</title>
     {% if not current_user.Admin and ctx.Conf.AnalyticsId %}
     <script>
@@ -31,7 +34,19 @@
 </noscript>
 <div id="app"></div>
 <!-- built files will be auto injected -->
+
+
+
 <div class="container">
+    <div class="pb-2 mt-4 mb-2 border-bottom">
+        <h1>
+            egoroff.spb.ru
+            <small>
+                блог о программировании
+            </small>
+        </h1>
+    </div>
+
 <div class="row">
     <div class="col-lg-6">
         <h2><a href="{{ ctx.PathFor('blog') }}">Блог</a></h2>
@@ -64,11 +79,10 @@
 
 <footer class="footer" role="contentinfo">
     <div class="container">
-        <div class="social github" data-repo="egoroff">
+        <div class="social github mt-2" data-repo="egoroff">
             <iframe src="https://ghbtns.com/github-btn.html?user=aegoroff&repo=egoroff.spb.ru&type=follow&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="150" height="20"></iframe>
             <iframe src="https://ghbtns.com/github-btn.html?user=aegoroff&repo=egoroff.spb.ru&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="80" height="20"></iframe>
         </div>
-        <br/>
         <p class="muted">&copy; 2002-2021 - Александр Егоров</p>
     </div>
 </footer>
