--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -21,7 +21,7 @@
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
         Please enable it to continue.</strong>
 </noscript>
-<div id="app"></div>
+<div id="app" datafld="{{title}}"></div>
 <!-- built files will be auto injected -->
 {% include 'bit/announcement.html' %}
 {% block maincontainer %}
