--- a/ui/public/welcome.html
+++ b/ui/public/welcome.html
@@ -31,14 +31,7 @@
     </div>
     <div class="col-lg-6">
         <h2>Про апачей</h2>
-        {% if apache_docs %}
-        <dl>
-            {% for item in apache_docs %}
-            <dt><a href="{{ctx.PathFor('portfolio')}}{{ item.ID }}.html">{{ item.Title }}</a></dt>
-            <dd>{{ item.Description | safe }}</dd>
-            {% endfor %}
-        </dl>
-        {% endif %}
+        {% include 'portfolio/apache_documents_list.html' %}
     </div>
 </div>
 
