support icons from different font awesome libraries

--- a/ui/public/signin.html
+++ b/ui/public/signin.html
@@ -8,16 +8,16 @@
   <div class="row">
     <div class="col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
       <a class="btn btn-block btn-lg btn-social btn-google" href="{{google_signin_url}}" rel="nofollow">
-        <i class="icon" data-label="google"></i>&nbsp;
+        <i class="icon" data-label="google" datatype="fab"></i>&nbsp;
         Авторизация через Google
       </a>
       <a class="btn btn-block btn-lg btn-social btn-github" href="{{github_signin_url}}" rel="nofollow">
-          <i class="icon" data-label="github"></i>
+          <i class="icon" data-label="github" datatype="fab"></i>
         Авторизация через Github
       </a>
 
         <a class="btn btn-block btn-lg btn-social btn-facebook" href="{{facebook_signin_url}}" rel="nofollow">
-            <i class="icon" data-label="facebook"></i>
+            <i class="icon" data-label="facebook" datatype="fab"></i>
           Авторизация через Facebook
         </a>
 
