--- a/ui/public/portfolio/index.html
+++ b/ui/public/portfolio/index.html
@@ -1,6 +1,7 @@
 {% extends '../index.html' %}
 
 {% block content %}
+<div class="container">
     <div class="pb-2 mt-4 mb-2 border-bottom">
         <h1>
             {{ title }}
@@ -19,4 +20,5 @@
             {% include 'downloads.html' %}
         </div>
     </div>
+</div>
 {% endblock %}
