--- a/ui/public/error.html
+++ b/ui/public/error.html
@@ -1,6 +1,7 @@
 {% extends 'index.html' %}
 
 {% block content %}
+<div class="container">
   <div class="jumbotron">
     <div class="container">
       <h2>
@@ -11,4 +12,5 @@
     </div>
   </div>
   <img src="//i.imgur.com/wzBcYCV.png" class="img-error" alt="xkcd: Wisdom of the Ancients" title="xkcd: Wisdom of the Ancients">
+</div>
 {% endblock %}
