--- a/ui/public/portfolio/apache.html
+++ b/ui/public/portfolio/apache.html
@@ -1,12 +1,13 @@
 {% extends '../index.html' %}
 
 {% block content %}
-
+<div class="container">
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
             {{ content | safe }}
         </div>
     </div>
+</div>
 </div>
 {% endblock %}
