--- a/ui/public/search.html
+++ b/ui/public/search.html
@@ -1,7 +1,7 @@
 {% extends 'index.html' %}
 
 {% block content %}
-
+<div class="container">
       <div class="row">
         <div class="col-lg-8">
             <label class="sr-only" for="q">форма поиска</label>
@@ -22,4 +22,5 @@
                </ul>
           </div>
     </div>
+</div>
 {% endblock %}
