--- a/ui/public/signin.html
+++ b/ui/public/signin.html
@@ -1,6 +1,7 @@
 {% extends 'index.html' %}
 
 {% block content %}
+<div class="container">
   <div class="pb-2 mt-4 mb-2 border-bottom">
     <h1>{{title}} <small>Займет только несколько секунд!</small></h1>
   </div>
@@ -23,4 +24,5 @@
 
     </div>
   </div>
+</div>
 {% endblock %}
