pass site id and search key to search component

--- a/ui/public/search.html
+++ b/ui/public/search.html
@@ -1,6 +1,6 @@
 {% extends 'index.html' %}
 
 {% block content %}
-<div class="container" id="siteSearch">
+<div class="container" id="siteSearch" property="{{ctx.Conf.SearchApiKey}}" datafld="{{ctx.Conf.GoogleSiteId}}">
 </div>
 {% endblock %}
