obsolete stuff removed

--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -39,7 +39,7 @@
         <p class="muted">&copy; 2002-2021 - Александр Егоров</p>
     </div>
 </footer>
-<script src="/p/min/script/syntaxhighlighter.min.js?{{current_version_id}}"></script>
+<script src="/js/syntaxhighlighter.min.js?{{current_version_id}}"></script>
 {% block scripts %}
 {% endblock %}
 </body>
