--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -11,6 +11,10 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link href='https://fonts.googleapis.com/css?family=Noto+Serif:400,700,400italic,700italic|Open+Sans:700,400&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
     <title>{{title}}{% if title_path %}{{" | "}}{{title_path}}{% endif %}</title>
+    <link href="<%= BASE_URL %>blog/recent.atom"
+          rel="alternate"
+          title="Recent Posts"
+          type="application/atom+xml">
     {% block head %}
     {% endblock %}
 </head>
