--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -23,6 +23,17 @@
           type="application/atom+xml">
     {% block head %}
     {% endblock %}
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', '{{ctx.Conf.AnalyticsId}}', 'egoroff.spb.ru');
+      ga('require', 'linkid', 'linkid.js');
+      ga('send', 'pageview');
+
+    </script>
 </head>
 <body>
 <noscript>
@@ -47,7 +58,6 @@
         <p class="muted">&copy; 2002-2021 - Александр Егоров</p>
     </div>
 </footer>
-<script src="/js/syntaxhighlighter.min.js?{{current_version_id}}"></script>
 {% block scripts %}
 {% endblock %}
 </body>
