--- a/ui/public/profile.html
+++ b/ui/public/profile.html
@@ -1,6 +1,6 @@
 {% extends 'index.html' %}
 
 {% block content %}
-<div class="container" id="userProfile" property="{{ctx.Conf.SearchApiKey}}" datafld="{{ctx.Conf.GoogleSiteId}}">
+<div class="container" id="userProfile">
 </div>
 {% endblock %}
