--- a/ui/public/bit/announcement.html
+++ b/ui/public/bit/announcement.html
@@ -1,8 +1,8 @@
-{% if ctx.conf.AnnouncementHtml %}
-  <div class="alert-{{ctx.conf.AnnouncementType}}">
+{% if congig.AnnouncementHtml %}
+  <div class="alert-{{congig.AnnouncementType}}">
     <div class="container alert alert-dismissable alert-announcement">
       <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-      {{ctx.conf.AnnouncementHtml|safe}}
+      {{congig.AnnouncementHtml|safe}}
     </div>
   </div>
 {% endif %}
