refactoring: typograph moved to separate module and code cleaup and fixing made unified - using pongo filter

--- a/ui/public/portfolio/apache.html
+++ b/ui/public/portfolio/apache.html
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
-            {{ content | safe }}
+            {{ content | safe | typograph }}
         </div>
     </div>
 </div>
