--- a/ui/public/portfolio/apache_documents_list.html
+++ b/ui/public/portfolio/apache_documents_list.html
@@ -3,7 +3,7 @@
 <dl>
     {% for item in apache_docs %}
         <dt><a href="{{ctx.PathFor('portfolio')}}{{ item.ID }}.html">{{ item.Title }}</a></dt>
-        <dd>{{ item.Description | safe }}</dd>
+        <dd>{{ item.Description | safe | typograph }}</dd>
     {% endfor %}
 </dl>
 {% endif %}
