--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -17,7 +17,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="authorization_endpoint" href="https://www.egoroff.spb.ru/auth">
     <link rel="authorization_token" href="https://www.egoroff.spb.ru/token">
-    <link rel="micropub" href="https://www.egoroff.spb.ru/micropub">
+    <link rel="micropub" href="https://www.egoroff.spb.ru/micropub/">
     <link href='https://fonts.googleapis.com/css?family=Noto+Serif:400,700,400italic,700italic|Open+Sans:700,400&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
     <title>{{title}}{% if title_path %}{{" | "}}{{title_path}}{% endif %}</title>
     <link href="<%= BASE_URL %>blog/recent.atom"
