--- a/ui/public/bit/notifications.html
+++ b/ui/public/bit/notifications.html
@@ -1,4 +1,5 @@
-<div id="notifications">
+{% if flashed_messages %}
+<div id="notifications" class="container">
     {% for message in flashed_messages %}
     <div class="alert alert-dismissable alert-{{message.Type}}">
         <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
@@ -6,3 +7,4 @@
     </div>
     {% endfor %}
 </div>
+{% endif %}
