notifications dismissing fixed. Obsolete social component removed

--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -45,12 +45,7 @@
 </noscript>
 <div id="app" datafld="{{title}}"></div>
 <!-- built files will be auto injected -->
-{% block maincontainer %}
-    {% include 'bit/notifications.html' %}
-    {% block content %}
-    {% endblock %}
-{% endblock %}
-
+{% block content %}{% endblock %}
 <footer class="footer" role="contentinfo">
     <div class="container">
         <div class="social github mt-2" data-repo="egoroff">
