--- a/ui/public/welcome.html
+++ b/ui/public/welcome.html
@@ -7,6 +7,7 @@
 
 {% block content %}
 <div class="container">
+    {% include 'bit/notifications.html' %}
     <div class="pb-2 mt-4 mb-2 border-bottom">
         <h1>
             egoroff.spb.ru
