--- a/ui/public/error.html
+++ b/ui/public/error.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <div class="container">
+    {% include 'bit/notifications.html' %}
   <div class="jumbotron">
     <div class="container">
       <h2>
