--- a/ui/public/portfolio/apache.html
+++ b/ui/public/portfolio/apache.html
@@ -2,12 +2,11 @@
 
 {% block content %}
 <div class="container">
-<div class="container">
+    {% include '../bit/notifications.html' %}
     <div class="row">
         <div class="col-lg-12">
             {{ content | safe | typograph }}
         </div>
     </div>
-</div>
 </div>
 {% endblock %}
