--- a/ui/public/search.html
+++ b/ui/public/search.html
@@ -2,5 +2,6 @@
 
 {% block content %}
 <div class="container" id="siteSearch" property="{{config.SearchApiKey}}" datafld="{{config.GoogleSiteId}}">
+    {% include 'bit/notifications.html' %}
 </div>
 {% endblock %}
