--- a/ui/public/signin.html
+++ b/ui/public/signin.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <div class="container">
+    {% include 'bit/notifications.html' %}
   <div class="pb-2 mt-4 mb-2 border-bottom">
     <h1>{{title}} <small>Займет только несколько секунд!</small></h1>
   </div>
