fix: CSS fixed in container

--- a/ui/public/welcome_r.html
+++ b/ui/public/welcome_r.html
@@ -1,4 +1,4 @@
-{% extends 'index_r.html' %}
+{% extends 'index.html' %}
 
 {% block meta %}
 <meta name="google-site-verification" content="PHs3gMRw0_sIAdVqjk38_fbq9h3VGHkkIq3w1chJXWs"/>
@@ -7,7 +7,7 @@
 
 {% block content %}
 <div class="container">
-    {% include 'bit/notifications_r.html' %}
+    {% include 'bit/notifications.html' %}
     <div class="pb-2 mt-4 mb-2 border-bottom">
         <h1>
             egoroff.spb.ru
@@ -23,7 +23,7 @@
             {% if posts %}
             <dl itemscope itemtype="http://schema.org/BlogPosting" id="log">
                 {% for post in posts %}
-                {% include 'blog/post_box_r.html' %}
+                {% include 'blog/post_box.html' %}
                 {% endfor %}
             </dl>
             {% else %}
@@ -32,7 +32,7 @@
         </div>
         <div class="col-lg-6">
             <h2>Про апачей</h2>
-            {% include 'portfolio/apache_documents_list_r.html' %}
+            {% include 'portfolio/apache_documents_list.html' %}
         </div>
     </div>
 </div>
