--- a/ui/public/portfolio/apache_r.html
+++ b/ui/public/portfolio/apache_r.html
@@ -1,8 +1,8 @@
-{% extends 'index_r.html' %}
+{% extends 'index.html' %}
 
 {% block content %}
 <div class="container">
-    {% include 'bit/notifications_r.html' %}
+    {% include 'bit/notifications.html' %}
     <div class="row">
         <div class="col-lg-12">
             {{ content | safe | typograph }}
