feat: search and statistic

--- a/ui/public/index_r.html
+++ b/ui/public/index_r.html
@@ -28,7 +28,7 @@
     {% if gin_mode == 'release' %}
     <script>
       window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-      ga('create', '{{config.AnalyticsId}}', 'egoroff.spb.ru');
+      ga('create', '{{config.analytics_id}}', 'egoroff.spb.ru');
       ga('require', 'linkid', 'linkid.js');
       ga('send', 'pageview');
     </script>
