feat: typograph draft

--- a/ui/public/portfolio/apache_documents_list_r.html
+++ b/ui/public/portfolio/apache_documents_list_r.html
@@ -3,7 +3,7 @@
 <dl>
     {% for item in apache_docs %}
         <dt><a href="{{path_for(id='portfolio') | safe}}{{ item.id }}.html">{{ item.title }}</a></dt>
-        <dd>{{ item.description | safe }}</dd>
+        <dd>{{ item.description | typograph | safe }}</dd>
     {% endfor %}
 </dl>
 {% endif %}
