--- a/ui/public/portfolio/apache_r.html
+++ b/ui/public/portfolio/apache_r.html
@@ -5,7 +5,7 @@
     {% include 'bit/notifications.html' %}
     <div class="row">
         <div class="col-lg-12">
-            {{ content | safe }}
+            {{ content | typograph | safe }}
         </div>
     </div>
 </div>
