--- a/ui/public/index_r.html
+++ b/ui/public/index_r.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html {% if html_class %}{{class="}}{{html_class}}{{"}}{% endif %} lang="ru">
+<html {% if html_class %}class="{{html_class}}"{% endif %} lang="ru">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
