--- a/ui/public/bit/notifications.html
+++ b/ui/public/bit/notifications.html
@@ -1,5 +1,7 @@
+{% if flashed_messages %}
 {% for message in flashed_messages %}
-<div class="alert" data-label="{{message.Type}}">
-    {{message.Text}}
+<div class="alert" data-label="{{message.type}}">
+    {{message.text}}
 </div>
 {% endfor %}
+{% endif %}
