--- a/ui/public/search_g.html
+++ b/ui/public/search_g.html
@@ -1,7 +1,7 @@
 {% extends 'index.html' %}
 
 {% block content %}
-<div class="container" id="siteSearch" property="{{config.search_api_key}}" datafld="{{config.google_site_id}}">
+<div class="container" id="siteSearch" property="{{config.SearchApiKey}}" datafld="{{config.GoogleSiteId}}">
     {% include 'bit/notifications.html' %}
 </div>
 {% endblock %}
