--- a/ui/public/welcome_g.html
+++ b/ui/public/welcome_g.html
@@ -19,7 +19,7 @@
 
     <div class="row">
         <div class="col-lg-6">
-            <h2><a href="{{ path_for(id='blog') | safe }}">Блог</a></h2>
+            <h2><a href="{{ ctx.PathFor('blog') }}">Блог</a></h2>
             {% if posts %}
             <dl itemscope itemtype="http://schema.org/BlogPosting" id="log">
                 {% for post in posts %}
