feat: Yandex OAuth authorization added

--- a/ui/public/signin.html
+++ b/ui/public/signin.html
@@ -17,6 +17,10 @@
           <i class="icon" data-label="github" datatype="fab"></i>
         Авторизация через Github
       </a>
+      <a class="btn btn-block btn-lg btn-social btn-yandex" href="{{yandex_signin_url}}" rel="nofollow">
+          <i class="icon" data-label="yandex" datatype="fab"></i>
+        Авторизация через Yandex
+      </a>
 
     </div>
   </div>
