--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -20,7 +20,7 @@
     <link href="https://www.egoroff.spb.ru/micropub/" rel="micropub"/>
     <link href='https://fonts.googleapis.com/css?family=Noto+Serif:400,700,400italic,700italic|Open+Sans:700,400&subset=latin,cyrillic' rel='stylesheet' type='text/css'/>
     <title>{{title}}{% if title_path %}{{" | "}}{{title_path}}{% endif %}</title>
-    <link href="{{path_for(id='blog') | safe}}recent.atom"
+    <link href="/blog/recent.atom"
           rel="alternate"
           title="Recent Posts"
           type="application/atom+xml"/>
