--- a/ui/public/portfolio/downloads.html
+++ b/ui/public/portfolio/downloads.html
@@ -4,7 +4,7 @@
     <ul class="list-unstyled">
     {% for f in folder.files %}
         <li itemscope itemtype="http://schema.org/SoftwareApplication">
-            <a itemprop="downloadUrl" href="{{ f.path }}" onclick="_gaq.push(['_trackPageview', '{{ f.filename }}']);"><i class="icon" data-label="download"></i>&nbsp;<span itemprop="name">{{ f.title }}</span></a>&nbsp;
+            <a itemprop="downloadUrl" href="{{ f.path | safe }}" onclick="gtag('event', 'file_download', { 'send_to': 'G-HRFZ3XCBK8', 'file_name': '{{ f.filename }}', 'link_url': '{{ f.path | safe }}' });"><i class="icon" data-label="download"></i>&nbsp;<span itemprop="name">{{ f.title }}</span></a>&nbsp;
             <small><span>&mdash;&nbsp;{{ f.size | human_readable_size }}</span></small>
         </li>
     {% endfor %}
