--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html {% if html_class %}class="{{html_class}}"{% endif %} lang="ru">
+<html {% if !html_class.is_empty() %}class="{{html_class}}"{% endif %} lang="ru">
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"/>
     <meta name="author" content="Александр Егоров"/>
-    {% if meta_description %}
+    {% if !meta_description.is_empty() %}
     <meta name="description" content="{{ meta_description }}"/>
     {% endif %}
-    {% if keywords %}
+    {% if !keywords.is_empty() %}
     <meta name="keywords" content="{{ keywords }}"/>
     {% endif %}
     {% block meta %}
@@ -20,7 +20,7 @@
     <link href="https://www.egoroff.spb.ru/micropub/" rel="micropub"/>
     <link href='https://fonts.googleapis.com/css?family=Noto+Serif:400,700,400italic,700italic&subset=latin,cyrillic' rel='stylesheet' type='text/css'/>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:700,400&subset=latin,cyrillic' rel='stylesheet' type='text/css'/>
-    <title>{{title}}{% if title_path %}{{" | "}}{{title_path}}{% endif %}</title>
+    <title>{{title}}{% if !title_path.is_empty() %}{{" | "}}{{title_path}}{% endif %}</title>
     <link href="/blog/recent.atom"
           rel="alternate"
           title="Recent Posts"
