--- a/ui/public/error.html
+++ b/ui/public/error.html
@@ -1,8 +1,8 @@
-{% extends 'index.html' %}
+{% extends "index.html" %}
 
 {% block content %}
 <div class="container">
-    {% include 'bit/notifications.html' %}
+    {% include "bit/notifications.html" %}
   <div class="jumbotron">
     <div class="container">
       <h2>
