--- a/ui/public/portfolio/index.html
+++ b/ui/public/portfolio/index.html
@@ -1,8 +1,8 @@
-{% extends 'index.html' %}
+{% extends "../index.html" %}
 
 {% block content %}
 <div class="container">
-    {% include 'bit/notifications.html' %}
+    {% include "bit/notifications.html" %}
     <div class="pb-2 mt-4 mb-2 border-bottom">
         <h1>
             {{ title }}
@@ -14,11 +14,11 @@
     <div class="row">
         <div class="col-lg-6">
             <h1>Про апачей</h1>
-            {% include 'portfolio/apache_documents_list.html' %}
+            {% include "portfolio/apache_documents_list.html" %}
         </div>
         <div class="col-lg-6">
             <h1>Загрузки</h1>
-            {% include 'portfolio/downloads.html' %}
+            {% include "portfolio/downloads.html" %}
         </div>
     </div>
 </div>
