--- a/ui/public/profile.html
+++ b/ui/public/profile.html
@@ -1,7 +1,7 @@
-{% extends 'index.html' %}
+{% extends "index.html" %}
 
 {% block content %}
 <div class="container" id="userProfile">
-    {% include 'bit/notifications.html' %}
+    {% include "bit/notifications.html" %}
 </div>
 {% endblock %}
