chore: more whitespace controls in templates

--- a/ui/public/portfolio/apache.html
+++ b/ui/public/portfolio/apache.html
@@ -5,7 +5,7 @@
     {% include "bit/notifications.html" %}
     <div class="row">
         <div class="col-lg-12">
-            {{ content|typograph|safe }}
+            {{- content|typograph|safe -}}
         </div>
     </div>
 </div>
