--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -36,7 +36,7 @@
 {% block content %}{% endblock %}
 <footer class="footer" role="contentinfo">
     <div class="container">
-        <p class="muted" itemprop="copyrightHolder" itemtype="http://schema.org/CreativeWork">&copy; 2002-2024 - Александр Егоров</p>
+        <p class="muted">&copy; 2002-2024 - Александр Егоров</p>
     </div>
 </footer>
 </body>
