feat: Downloads loading and displaying moved to UI and uses new API method now

--- a/ui/public/portfolio/index.html
+++ b/ui/public/portfolio/index.html
@@ -13,9 +13,7 @@
             <h1>Про апачей</h1>
             {% include "portfolio/apache_documents_list.html" %}
         </div>
-        <div class="col-lg-6">
-            <h1>Загрузки</h1>
-            {% include "portfolio/downloads.html" %}
+        <div class="col-lg-6" id="portfolioDownloads">
         </div>
     </div>
 </div>
