--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -34,9 +34,9 @@
 <div id="app" datafld="{{title}}"></div>
 <!-- built files will be auto injected -->
 {% block content %}{% endblock %}
-<footer class="footer" role="contentinfo">
-    <div class="container">
-        <p class="muted">&copy; 2002-2025 - Александр Егоров</p>
+<footer class="footer bg-light" role="contentinfo">
+    <div class="container text-center">
+        <p class="text-muted mb-0">&copy; 2002-2025 - Александр Егоров</p>
     </div>
 </footer>
 </body>
