fix: signin page fixed

--- a/ui/public/signin.html
+++ b/ui/public/signin.html
@@ -8,20 +8,21 @@
   </div>
 
   <div class="row">
-    <div class="col-lg-6 col-lg-offset-6 col-md-4 col-md-offset-6 col-sm-6 col-sm-offset-3">
-      <a class="btn btn-block btn-lg btn-social btn-google" href="{{google_signin_url}}" rel="nofollow">
-        <i class="icon" data-label="google" datatype="fab"></i>&nbsp;
+    <div class="col-lg-6 col-md-6 col-sm-12">
+      <a class="btn btn-lg btn-social btn-google w-100 mb-2" href="{{google_signin_url}}">
+        <i class="icon" data-label="google" datatype="fab"></i>
         Авторизация через Google
       </a>
-      <a class="btn btn-block btn-lg btn-social btn-github" href="{{github_signin_url}}" rel="nofollow">
-          <i class="icon" data-label="github" datatype="fab"></i>
+
+      <a class="btn btn-lg btn-social btn-github w-100 mb-2" href="{{github_signin_url}}">
+        <i class="icon" data-label="github" datatype="fab"></i>
         Авторизация через Github
       </a>
-      <a class="btn btn-block btn-lg btn-social btn-yandex" href="{{yandex_signin_url}}" rel="nofollow">
-          <i class="icon" data-label="yandex" datatype="fab"></i>
+
+      <a class="btn btn-lg btn-social btn-yandex w-100" href="{{yandex_signin_url}}">
+        <i class="icon" data-label="yandex" datatype="fab"></i>
         Авторизация через Yandex
       </a>
-
     </div>
   </div>
 </div>
