--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -36,7 +36,7 @@
 {% block content %}{% endblock %}
 <footer class="footer bg-light" role="contentinfo">
     <div class="container text-center">
-        <p class="text-muted mb-0">&copy; 2002-2025 - Александр Егоров</p>
+        <p class="text-muted mb-0">&copy; 2002-{{ year }} - Александр Егоров</p>
     </div>
 </footer>
 </body>
