fix: error page image loading fixed

--- a/ui/public/error.html
+++ b/ui/public/error.html
@@ -12,6 +12,6 @@
       <p>Возможно моя вина ... возможно ваша, но в любом случае, запрашиваемая страница недоступна!</p>
     </div>
   </div>
-  <img src="//i.imgur.com/wzBcYCV.png" class="img-error" alt="xkcd: Wisdom of the Ancients" title="xkcd: Wisdom of the Ancients">
+  <img src="https://i.imgur.com/wzBcYCV.png" class="img-error" alt="xkcd: Wisdom of the Ancients" title="xkcd: Wisdom of the Ancients">
 </div>
 {% endblock %}
